--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Katie Evanko-Douglas
-subtitle: I'm a data scientist with a background in survey research and a passion for NLP and qualitative analysis.
+subtitle: I'm a data scientist with a background in survey research and a passion for natural language processing and qualitative analysis.
 use-site-title: true
 ---
 
